testsuite/poke.pkl/div-f32-diag-1.pk
/* { dg-do compile } */

var res
  = (5 as int<31>) ./ 1; /* { dg-error "invalid operand .*" } */
